# Gramm-Shmidt

./: .gitignore  CMakeLists.txt  PythonSolytion.ipynb  README.md  Reader.cpp  Reader.h  Shop.cpp  Shop.h  algorithm  input_file.txt  main.cpp  test.ipynb
src/: main.cc
src/core/: gram_schmidt_matrix.cc  gram_schmidt_matrix.h  my_matrix.cc  my_matrix.h  reader.cc  reader.h  shop.cc  shop.h
test/: CMakeCache.txt  CMakeLists.txt  shop_test.cc  shop_test.h
test/instances/: bias.txt  database.txt  transforms.txt
